# ai_bom

./: .env.example  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/actions/ai-bom-check/: action.yml
.github/workflows/: ai-bom-check.yml  ci.yml
backend/: Dockerfile  alembic.ini  docker-compose.yml  requirements.txt
backend/ai_bom/: __init__.py  cli.py  main.py  tasks.py
backend/ai_bom/api/v1/: auth.py  boms.py  mappings.py  projects.py  (+2 more)
backend/ai_bom/compliance/: mapping.py
backend/ai_bom/core/: config.py  logging.py  rbac.py  security.py  utils.py
backend/ai_bom/db/: models.py  session.py
backend/ai_bom/schemas/: bom.py
backend/ai_bom/services/: audit.py  exporter.py  scanner.py  signer.py  storage.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auditlog_trigger.py
backend/tests/: test_scanner.py  test_signer.py
docs/: api-reference.md  architecture.md  compliance.md  data-model.md  deployment.md  frontend-guide.md
examples/: sample_bom.json
frontend/: .eslintrc.json  jest.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/pages/: dashboard.tsx  index.tsx
helm/ai-bom/: Chart.yaml  values.yaml
helm/ai-bom/templates/: deployment.yaml
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  service.yaml  worker-deployment.yaml
ops/: grafana-dashboard.json
scripts/: db_backup.sh  db_restore.sh  deploy.sh  gen_types.py  s3_setup_policy_lifecycle.py  seed_admin.py
(+1 files in other folders)
