[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bom"
version = "0.1.0"
description = "AI Bill of Materials (AI-BOM) CLI and API"
authors = [{name = "ai-bom maintainers"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-bom = "ai_bom.cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["ai_bom*"]

